--- a/src/my-app.html
+++ b/src/my-app.html
@@ -31,51 +31,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
     <style>
       :host {
-        --app-primary-color: #4285f4;
-        --app-secondary-color: black;
-
         display: block;
       }
 
-      app-drawer-layout:not([narrow]) [drawer-toggle] {
-        display: none;
-      }
-
-      app-header {
-        color: #fff;
-        background-color: var(--app-primary-color);
-      }
-
-      app-header paper-icon-button {
-        --paper-icon-button-ink-color: white;
-      }
-
-      .drawer-list {
-        margin: 0 20px;
-      }
-
-      .drawer-list a {
-        display: block;
-        padding: 0 16px;
-        text-decoration: none;
-        color: var(--app-secondary-color);
-        line-height: 40px;
-      }
-
-      .drawer-list a.iron-selected {
-        color: black;
-        font-weight: bold;
-      }
-
-      #container {
-        width: 72px;
-        height: 72px;
-
+      my-view1 {
         position: absolute;
-        top: 10px;
 
-        border: solid 1px green;
-        transition: left 1.0s, top 1.0s;
+        top: 10px;
       }
     </style>
 
@@ -92,13 +54,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         fallback-selection="view404"
         role="main">
       <my-view1 name="view1">
-        <div id="container" slot="image">
-          <slot name="image"></slot>
-        </div>
+        <slot></slot>
       </my-view1>
-      <my-view2 name="view2"></my-view2>
-      <my-view3 name="view3"></my-view3>
-      <my-view404 name="view404"></my-view404>
     </iron-pages>
 
   </template>
@@ -130,8 +87,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       connectedCallback() {
         super.connectedCallback();
-
-        this.removeAttribute('unresolved');
       }
 
       _routePageChanged(page) {
